--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@types/express": "^4.17.1",
     "@types/jsonwebtoken": "^8.3.4",
+    "@types/socket.io": "^2.1.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mysql": "^2.17.1",
+    "socket.io": "^2.3.0",
     "typescript": "^3.6.3"
   }
 }
