--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mysql": "^2.17.1",
+    "mongodb": "^3.3.3",
     "socket.io": "^2.3.0",
     "typescript": "^3.6.3"
   }
