--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/express": "^4.17.1",
     "@types/jsonwebtoken": "^8.3.4",
+    "@types/mongodb": "^3.3.8",
     "@types/socket.io": "^2.1.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
