--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node build/test-server.js"
+    "start": "clear && tsc && node build/test-server.js"
   },
   "author": "",
   "license": "ISC",
