--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/mongodb": "^3.3.8",
     "@types/socket.io": "^2.1.4",
     "body-parser": "^1.19.0",
+    "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
